--- a/01b-avito-downloader-land.ipynb
+++ b/01b-avito-downloader-land.ipynb
@@ -116,40 +116,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-13 13:55:29 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-09-13 13:55:29 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-09-13 13:55:31 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-09-13 13:55:31 | AvitoParser: init\n",
-      "[INFO    ] 2022-09-13 13:55:37 | AvitoParser: 23 pages for read\n",
-      "[INFO    ] 2022-09-13 13:55:37 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-09-13 13:55:41 | AdsListParser: read page 1\n",
-      "[INFO    ] 2022-09-13 13:55:45 | AdsListParser: read page 2\n",
-      "[INFO    ] 2022-09-13 13:55:48 | AdsListParser: read page 3\n",
-      "[INFO    ] 2022-09-13 13:55:52 | AdsListParser: read page 4\n",
-      "[INFO    ] 2022-09-13 13:55:54 | AdsListParser: read page 5\n",
-      "[INFO    ] 2022-09-13 13:55:57 | AdsListParser: read page 6\n",
-      "[INFO    ] 2022-09-13 13:56:00 | AdsListParser: read page 7\n",
-      "[INFO    ] 2022-09-13 13:56:05 | AdsListParser: read page 8\n",
-      "[INFO    ] 2022-09-13 13:56:08 | AdsListParser: read page 9\n",
-      "[INFO    ] 2022-09-13 13:56:13 | AdsListParser: read page 10\n",
-      "[INFO    ] 2022-09-13 13:56:16 | AdsListParser: read page 11\n",
-      "[INFO    ] 2022-09-13 13:56:19 | AdsListParser: read page 12\n",
-      "[INFO    ] 2022-09-13 13:56:22 | AdsListParser: read page 13\n",
-      "[INFO    ] 2022-09-13 13:56:24 | AdsListParser: read page 14\n",
-      "[INFO    ] 2022-09-13 13:56:27 | AdsListParser: read page 15\n",
-      "[INFO    ] 2022-09-13 13:56:30 | AdsListParser: read page 16\n",
-      "[INFO    ] 2022-09-13 13:56:33 | AdsListParser: read page 17\n",
-      "[INFO    ] 2022-09-13 13:56:38 | AdsListParser: read page 18\n",
-      "[INFO    ] 2022-09-13 13:56:41 | AdsListParser: read page 19\n",
-      "[INFO    ] 2022-09-13 13:56:44 | AdsListParser: read page 20\n",
-      "[INFO    ] 2022-09-13 13:56:46 | AdsListParser: read page 21\n",
-      "[INFO    ] 2022-09-13 13:56:52 | AdsListParser: read page 22\n",
-      "[INFO    ] 2022-09-13 13:56:54 | AdsListParser: read page 23\n",
-      "[INFO    ] 2022-09-13 13:56:54 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-09-13 13:56:55 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "1121\n",
-      "CPU times: user 4.65 s, sys: 119 ms, total: 4.77 s\n",
-      "Wall time: 1min 25s\n"
+      "[INFO    ] 2022-09-15 10:30:11 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-09-15 10:30:11 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-09-15 10:30:13 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-09-15 10:30:13 | AvitoParser: init\n",
+      "[INFO    ] 2022-09-15 10:30:18 | AvitoParser: 23 pages for read\n",
+      "[INFO    ] 2022-09-15 10:30:18 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-09-15 10:30:21 | AdsListParser: read page 1\n",
+      "[INFO    ] 2022-09-15 10:30:25 | AdsListParser: read page 2\n",
+      "[INFO    ] 2022-09-15 10:30:29 | AdsListParser: read page 3\n",
+      "[INFO    ] 2022-09-15 10:30:32 | AdsListParser: read page 4\n",
+      "[INFO    ] 2022-09-15 10:30:35 | AdsListParser: read page 5\n",
+      "[INFO    ] 2022-09-15 10:30:38 | AdsListParser: read page 6\n",
+      "[INFO    ] 2022-09-15 10:30:41 | AdsListParser: read page 7\n",
+      "[INFO    ] 2022-09-15 10:30:45 | AdsListParser: read page 8\n",
+      "[INFO    ] 2022-09-15 10:30:48 | AdsListParser: read page 9\n",
+      "[INFO    ] 2022-09-15 10:30:51 | AdsListParser: read page 10\n",
+      "[INFO    ] 2022-09-15 10:30:54 | AdsListParser: read page 11\n",
+      "[INFO    ] 2022-09-15 10:30:57 | AdsListParser: read page 12\n",
+      "[INFO    ] 2022-09-15 10:30:59 | AdsListParser: read page 13\n",
+      "[INFO    ] 2022-09-15 10:31:02 | AdsListParser: read page 14\n",
+      "[INFO    ] 2022-09-15 10:31:04 | AdsListParser: read page 15\n",
+      "[INFO    ] 2022-09-15 10:31:07 | AdsListParser: read page 16\n",
+      "[INFO    ] 2022-09-15 10:31:10 | AdsListParser: read page 17\n",
+      "[INFO    ] 2022-09-15 10:31:12 | AdsListParser: read page 18\n",
+      "[INFO    ] 2022-09-15 10:31:15 | AdsListParser: read page 19\n",
+      "[INFO    ] 2022-09-15 10:31:18 | AdsListParser: read page 20\n",
+      "[INFO    ] 2022-09-15 10:31:20 | AdsListParser: read page 21\n",
+      "[INFO    ] 2022-09-15 10:31:22 | AdsListParser: read page 22\n",
+      "[INFO    ] 2022-09-15 10:31:26 | AdsListParser: read page 23\n",
+      "[INFO    ] 2022-09-15 10:31:26 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-09-15 10:31:26 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "1127\n",
+      "CPU times: user 4.43 s, sys: 152 ms, total: 4.58 s\n",
+      "Wall time: 1min 15s\n"
      ]
     }
    ],
@@ -177,8 +177,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1121\n",
-      "1111\n"
+      "1127\n",
+      "1121\n"
      ]
     }
    ],
@@ -239,51 +239,47 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>333</th>\n",
-       "      <td>2302356440</td>\n",
-       "      <td>Объявление «Участок 10 сот. (ИЖС)» 32 фотографии</td>\n",
-       "      <td>1800000</td>\n",
+       "      <th>528</th>\n",
+       "      <td>2317736674</td>\n",
+       "      <td>Объявление «Участок 7 сот. (ИЖС)»</td>\n",
+       "      <td>2700000</td>\n",
        "      <td></td>\n",
-       "      <td>Севастополь, Балаклавский район, Орлиновский муниципальный округ</td>\n",
-       "      <td>Участки по новому ген плану войдут в зону населенного пункта и под малоэтажную жилищную застройку(ижс) на противоположном берегу большого озера у села Широкое, в 300 метрах от берега, прекрасные обзорные виды и чистейший воздух. \\n\\nЧитаем внимательно! \\nНа с</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2022-09-13 13:56:54.600362</td>\n",
+       "      <td>Нахимовский муниципальный округ, посёлок Любимовка</td>\n",
+       "      <td>Продам свой участок, свет подведен на участок, газ и вода можно подвести. \\n\\nТорг с реальным покупателем.\\n\\nАгентов просьба не беспокоить.</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2022-09-15 10:31:26.038609</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>872</th>\n",
-       "      <td>2365205749</td>\n",
-       "      <td>Объявление «Участок 5 сот. (ИЖС)» 13 фотографий</td>\n",
-       "      <td>4200000</td>\n",
+       "      <th>78</th>\n",
+       "      <td>2399408010</td>\n",
+       "      <td>Объявление «Участок 11 сот. (ИЖС)» 3 фотографии</td>\n",
+       "      <td>4000000</td>\n",
        "      <td></td>\n",
-       "      <td>Монастырское ш.</td>\n",
-       "      <td>Предлагается к продаже участок,5 соток, на Фиоленте-в первой линии от дороги (ориентир-конечная остановка автобусов №3, где воинская часть или Яшмовый пляж). Участок прямоугольной формы, одна половина-идеально ровная, другая-под небольшим уклоном. Коммуник</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2022-09-13 13:56:54.600362</td>\n",
+       "      <td>с. Тыловое, Ялтинская ул., 2</td>\n",
+       "      <td>СРОЧНО.СОБСТВЕННИК.Продам шикарный ровный участок под ИЖС ,с видом на горы в Байдарской долине.Рядом два живописных озера,отличные подъезд,5 минут пешком до Ялтинской трассы.Коммуникации вдоль участка.Документы,госакт в наличии.Без посредника,агенства прош</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2022-09-15 10:31:26.038609</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       avito_id                                             title    price  \\\n",
-       "333  2302356440  Объявление «Участок 10 сот. (ИЖС)» 32 фотографии  1800000   \n",
-       "872  2365205749   Объявление «Участок 5 сот. (ИЖС)» 13 фотографий  4200000   \n",
+       "       avito_id                                            title    price  \\\n",
+       "528  2317736674               Объявление «Участок 7 сот. (ИЖС)»   2700000   \n",
+       "78   2399408010  Объявление «Участок 11 сот. (ИЖС)» 3 фотографии  4000000   \n",
        "\n",
-       "    obj_name  \\\n",
-       "333            \n",
-       "872            \n",
+       "    obj_name                                                 adr  \\\n",
+       "528           Нахимовский муниципальный округ, посёлок Любимовка   \n",
+       "78                                  с. Тыловое, Ялтинская ул., 2   \n",
        "\n",
-       "                                                                  adr  \\\n",
-       "333  Севастополь, Балаклавский район, Орлиновский муниципальный округ   \n",
-       "872                                                   Монастырское ш.   \n",
-       "\n",
-       "                                                                                                                                                                                                                                                             description  \\\n",
-       "333  Участки по новому ген плану войдут в зону населенного пункта и под малоэтажную жилищную застройку(ижс) на противоположном берегу большого озера у села Широкое, в 300 метрах от берега, прекрасные обзорные виды и чистейший воздух. \\n\\nЧитаем внимательно! \\nНа с   \n",
-       "872     Предлагается к продаже участок,5 соток, на Фиоленте-в первой линии от дороги (ориентир-конечная остановка автобусов №3, где воинская часть или Яшмовый пляж). Участок прямоугольной формы, одна половина-идеально ровная, другая-под небольшим уклоном. Коммуник   \n",
+       "                                                                                                                                                                                                                                                          description  \\\n",
+       "528                                                                                                                      Продам свой участок, свет подведен на участок, газ и вода можно подвести. \\n\\nТорг с реальным покупателем.\\n\\nАгентов просьба не беспокоить.   \n",
+       "78   СРОЧНО.СОБСТВЕННИК.Продам шикарный ровный участок под ИЖС ,с видом на горы в Байдарской долине.Рядом два живописных озера,отличные подъезд,5 минут пешком до Ялтинской трассы.Коммуникации вдоль участка.Документы,госакт в наличии.Без посредника,агенства прош   \n",
        "\n",
        "     page                         ts  \n",
-       "333     7 2022-09-13 13:56:54.600362  \n",
-       "872    18 2022-09-13 13:56:54.600362  "
+       "528    11 2022-09-15 10:31:26.038609  \n",
+       "78      2 2022-09-15 10:31:26.038609  "
       ]
      },
      "execution_count": 9,
