--- a/01b-avito-downloader-land.ipynb
+++ b/01b-avito-downloader-land.ipynb
@@ -116,35 +116,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2023-01-10 11:26:01 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2023-01-10 11:26:01 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2023-01-10 11:26:04 | AdsListParser: downloader init\n",
-      "[INFO    ] 2023-01-10 11:26:04 | AvitoParser: init\n",
-      "[INFO    ] 2023-01-10 11:26:08 | AvitoParser: 18 pages for read\n",
-      "[INFO    ] 2023-01-10 11:26:08 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2023-01-10 11:26:10 | AdsListParser: read page 1\n",
-      "[INFO    ] 2023-01-10 11:26:12 | AdsListParser: read page 2\n",
-      "[INFO    ] 2023-01-10 11:26:14 | AdsListParser: read page 3\n",
-      "[INFO    ] 2023-01-10 11:26:16 | AdsListParser: read page 4\n",
-      "[INFO    ] 2023-01-10 11:26:18 | AdsListParser: read page 5\n",
-      "[INFO    ] 2023-01-10 11:26:19 | AdsListParser: read page 6\n",
-      "[INFO    ] 2023-01-10 11:26:22 | AdsListParser: read page 7\n",
-      "[INFO    ] 2023-01-10 11:26:23 | AdsListParser: read page 8\n",
-      "[INFO    ] 2023-01-10 11:27:25 | AdsListParser: read page 9\n",
-      "[INFO    ] 2023-01-10 11:27:26 | AdsListParser: read page 10\n",
-      "[INFO    ] 2023-01-10 11:27:28 | AdsListParser: read page 11\n",
-      "[INFO    ] 2023-01-10 11:27:30 | AdsListParser: read page 12\n",
-      "[INFO    ] 2023-01-10 11:27:32 | AdsListParser: read page 13\n",
-      "[INFO    ] 2023-01-10 11:27:33 | AdsListParser: read page 14\n",
-      "[INFO    ] 2023-01-10 11:27:35 | AdsListParser: read page 15\n",
-      "[INFO    ] 2023-01-10 11:27:38 | AdsListParser: read page 16\n",
-      "[INFO    ] 2023-01-10 11:27:41 | AdsListParser: read page 17\n",
-      "[INFO    ] 2023-01-10 11:27:43 | AdsListParser: read page 18\n",
-      "[INFO    ] 2023-01-10 11:27:43 | AdsListParser: last page detected\n",
-      "[INFO    ] 2023-01-10 11:27:44 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "899\n",
-      "CPU times: user 3.8 s, sys: 73.2 ms, total: 3.88 s\n",
-      "Wall time: 1min 42s\n"
+      "[INFO    ] 2023-01-27 16:41:34 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2023-01-27 16:41:34 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2023-01-27 16:41:37 | AdsListParser: downloader init\n",
+      "[INFO    ] 2023-01-27 16:41:37 | AvitoParser: init\n",
+      "[INFO    ] 2023-01-27 16:41:41 | AvitoParser: 21 pages for read\n",
+      "[INFO    ] 2023-01-27 16:41:41 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2023-01-27 16:41:43 | AdsListParser: read page 1\n",
+      "[INFO    ] 2023-01-27 16:41:44 | AdsListParser: read page 2\n",
+      "[INFO    ] 2023-01-27 16:41:46 | AdsListParser: read page 3\n",
+      "[INFO    ] 2023-01-27 16:41:47 | AdsListParser: read page 4\n",
+      "[INFO    ] 2023-01-27 16:41:49 | AdsListParser: read page 5\n",
+      "[INFO    ] 2023-01-27 16:41:50 | AdsListParser: read page 6\n",
+      "[INFO    ] 2023-01-27 16:41:52 | AdsListParser: read page 7\n",
+      "[INFO    ] 2023-01-27 16:41:54 | AdsListParser: read page 8\n",
+      "[INFO    ] 2023-01-27 16:41:55 | AdsListParser: read page 9\n",
+      "[INFO    ] 2023-01-27 16:41:57 | AdsListParser: read page 10\n",
+      "[INFO    ] 2023-01-27 16:41:59 | AdsListParser: read page 11\n",
+      "[INFO    ] 2023-01-27 16:42:01 | AdsListParser: read page 12\n",
+      "[INFO    ] 2023-01-27 16:42:03 | AdsListParser: read page 13\n",
+      "[INFO    ] 2023-01-27 16:42:05 | AdsListParser: read page 14\n",
+      "[INFO    ] 2023-01-27 16:42:07 | AdsListParser: read page 15\n",
+      "[INFO    ] 2023-01-27 16:42:09 | AdsListParser: read page 16\n",
+      "[INFO    ] 2023-01-27 16:42:11 | AdsListParser: read page 17\n",
+      "[INFO    ] 2023-01-27 16:42:13 | AdsListParser: read page 18\n",
+      "[INFO    ] 2023-01-27 16:42:14 | AdsListParser: read page 19\n",
+      "[INFO    ] 2023-01-27 16:42:16 | AdsListParser: read page 20\n",
+      "[INFO    ] 2023-01-27 16:42:18 | AdsListParser: read page 21\n",
+      "[INFO    ] 2023-01-27 16:42:18 | AdsListParser: last page detected\n",
+      "[INFO    ] 2023-01-27 16:42:18 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "956\n",
+      "CPU times: user 3.98 s, sys: 108 ms, total: 4.09 s\n",
+      "Wall time: 44.1 s\n"
      ]
     }
    ],
@@ -172,8 +175,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "899\n",
-      "827\n"
+      "956\n",
+      "914\n"
      ]
     }
    ],
@@ -245,27 +248,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>568</th>\n",
-       "      <td>2599231994</td>\n",
-       "      <td>Объявление «Участок 1,5 га (ИЖС)»</td>\n",
-       "      <td>60000000</td>\n",
+       "      <th>524</th>\n",
+       "      <td>2507049210</td>\n",
+       "      <td>Объявление «Участок 10 сот. (ИЖС)» 5 фотографий</td>\n",
+       "      <td>11000000</td>\n",
        "      <td></td>\n",
-       "      <td>с. Гончарное</td>\n",
-       "      <td>Ижс.</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2023-01-10 11:27:43.920515</td>\n",
+       "      <td></td>\n",
+       "      <td>Эксклюзив! 10 соток в Казачьей бухте 1 линия от моря! \\n\\nУл. Военных Строителей (рядом «Пилот», «Сократ», «Сатурн», «Риф-2»).\\n\\nОбщая площадь — 10 соток (20*30).\\n\\nИдеально ровный и прямоугольный.\\n\\nКатегория: земли населенных пунктов, разрешенное использовани</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2023-01-27 16:42:18.173009</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>2720146132</td>\n",
-       "      <td>Объявление «Участок 7,6 сот. (ИЖС)» 13 фотографий</td>\n",
-       "      <td>3500000</td>\n",
+       "      <th>382</th>\n",
+       "      <td>2752204186</td>\n",
+       "      <td>Объявление «Участок 5 сот. (ИЖС)» 9 фотографий</td>\n",
+       "      <td>4200000</td>\n",
        "      <td></td>\n",
-       "      <td>Севастополь, СНТ Инициатор</td>\n",
-       "      <td>Участок 7,57 соток СТ.\\n\\nУчасток 7,57 соток (СТ) расположен в г. Севастополь, Гагаринский район, Тсн Снт «Инициатор». Участок трапециевидной формы, с соотношением сторон 11 м*60 м*15 м, ровный, без уклона. Подъезд грунтовка. \\n\\nПозвоните нам, чтобы узнать вс</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2023-01-10 11:27:43.920515</td>\n",
+       "      <td></td>\n",
+       "      <td>Участок 5,2 сотки (Ижс), расположен в г. Севастополь, Гагаринский район, ул. Кедрина. Участок прямоугольной формы размером 14х40, подъезд грунтовка. \\n\\nПозвоните нам, чтобы узнать все детали! \\n\\nКоммуникации: \\n— свет — есть.\\n— вода — по границе участка.\\n— га</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2023-01-27 16:42:18.173009</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -273,21 +276,21 @@
        "</div>"
       ],
       "text/plain": [
-       "       avito_id                                              title     price  \\\n",
-       "568  2599231994                 Объявление «Участок 1,5 га (ИЖС)»   60000000   \n",
-       "81   2720146132  Объявление «Участок 7,6 сот. (ИЖС)» 13 фотографий   3500000   \n",
+       "       avito_id                                            title     price  \\\n",
+       "524  2507049210  Объявление «Участок 10 сот. (ИЖС)» 5 фотографий  11000000   \n",
+       "382  2752204186   Объявление «Участок 5 сот. (ИЖС)» 9 фотографий   4200000   \n",
        "\n",
-       "    obj_name                         adr  \\\n",
-       "568                         с. Гончарное   \n",
-       "81            Севастополь, СНТ Инициатор   \n",
+       "    obj_name adr  \\\n",
+       "524                \n",
+       "382                \n",
        "\n",
-       "                                                                                                                                                                                                                                                              description  \\\n",
-       "568                                                                                                                                                                                                                                                                  Ижс.   \n",
-       "81   Участок 7,57 соток СТ.\\n\\nУчасток 7,57 соток (СТ) расположен в г. Севастополь, Гагаринский район, Тсн Снт «Инициатор». Участок трапециевидной формы, с соотношением сторон 11 м*60 м*15 м, ровный, без уклона. Подъезд грунтовка. \\n\\nПозвоните нам, чтобы узнать вс   \n",
+       "                                                                                                                                                                                                                                                                  description  \\\n",
+       "524  Эксклюзив! 10 соток в Казачьей бухте 1 линия от моря! \\n\\nУл. Военных Строителей (рядом «Пилот», «Сократ», «Сатурн», «Риф-2»).\\n\\nОбщая площадь — 10 соток (20*30).\\n\\nИдеально ровный и прямоугольный.\\n\\nКатегория: земли населенных пунктов, разрешенное использовани   \n",
+       "382   Участок 5,2 сотки (Ижс), расположен в г. Севастополь, Гагаринский район, ул. Кедрина. Участок прямоугольной формы размером 14х40, подъезд грунтовка. \\n\\nПозвоните нам, чтобы узнать все детали! \\n\\nКоммуникации: \\n— свет — есть.\\n— вода — по границе участка.\\n— га   \n",
        "\n",
        "     page                         ts       place  \n",
-       "568    12 2023-01-10 11:27:43.920515  sevastopol  \n",
-       "81      2 2023-01-10 11:27:43.920515  sevastopol  "
+       "524    11 2023-01-27 16:42:18.173009  sevastopol  \n",
+       "382     8 2023-01-27 16:42:18.173009  sevastopol  "
       ]
      },
      "execution_count": 10,
