--- a/01b-avito-downloader-land.ipynb
+++ b/01b-avito-downloader-land.ipynb
@@ -116,38 +116,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2023-01-27 16:41:34 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2023-01-27 16:41:34 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2023-01-27 16:41:37 | AdsListParser: downloader init\n",
-      "[INFO    ] 2023-01-27 16:41:37 | AvitoParser: init\n",
-      "[INFO    ] 2023-01-27 16:41:41 | AvitoParser: 21 pages for read\n",
-      "[INFO    ] 2023-01-27 16:41:41 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2023-01-27 16:41:43 | AdsListParser: read page 1\n",
-      "[INFO    ] 2023-01-27 16:41:44 | AdsListParser: read page 2\n",
-      "[INFO    ] 2023-01-27 16:41:46 | AdsListParser: read page 3\n",
-      "[INFO    ] 2023-01-27 16:41:47 | AdsListParser: read page 4\n",
-      "[INFO    ] 2023-01-27 16:41:49 | AdsListParser: read page 5\n",
-      "[INFO    ] 2023-01-27 16:41:50 | AdsListParser: read page 6\n",
-      "[INFO    ] 2023-01-27 16:41:52 | AdsListParser: read page 7\n",
-      "[INFO    ] 2023-01-27 16:41:54 | AdsListParser: read page 8\n",
-      "[INFO    ] 2023-01-27 16:41:55 | AdsListParser: read page 9\n",
-      "[INFO    ] 2023-01-27 16:41:57 | AdsListParser: read page 10\n",
-      "[INFO    ] 2023-01-27 16:41:59 | AdsListParser: read page 11\n",
-      "[INFO    ] 2023-01-27 16:42:01 | AdsListParser: read page 12\n",
-      "[INFO    ] 2023-01-27 16:42:03 | AdsListParser: read page 13\n",
-      "[INFO    ] 2023-01-27 16:42:05 | AdsListParser: read page 14\n",
-      "[INFO    ] 2023-01-27 16:42:07 | AdsListParser: read page 15\n",
-      "[INFO    ] 2023-01-27 16:42:09 | AdsListParser: read page 16\n",
-      "[INFO    ] 2023-01-27 16:42:11 | AdsListParser: read page 17\n",
-      "[INFO    ] 2023-01-27 16:42:13 | AdsListParser: read page 18\n",
-      "[INFO    ] 2023-01-27 16:42:14 | AdsListParser: read page 19\n",
-      "[INFO    ] 2023-01-27 16:42:16 | AdsListParser: read page 20\n",
-      "[INFO    ] 2023-01-27 16:42:18 | AdsListParser: read page 21\n",
-      "[INFO    ] 2023-01-27 16:42:18 | AdsListParser: last page detected\n",
-      "[INFO    ] 2023-01-27 16:42:18 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "956\n",
-      "CPU times: user 3.98 s, sys: 108 ms, total: 4.09 s\n",
-      "Wall time: 44.1 s\n"
+      "[INFO    ] 2023-03-29 16:47:39 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2023-03-29 16:47:39 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2023-03-29 16:47:42 | AdsListParser: downloader init\n",
+      "[INFO    ] 2023-03-29 16:47:42 | AvitoParser: init\n",
+      "[INFO    ] 2023-03-29 16:47:57 | AvitoParser: 21 pages for read\n",
+      "[INFO    ] 2023-03-29 16:47:57 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2023-03-29 16:48:41 | AdsListParser: read page 1\n",
+      "[INFO    ] 2023-03-29 16:48:42 | AdsListParser: read page 2\n",
+      "[INFO    ] 2023-03-29 16:48:45 | AdsListParser: read page 3\n",
+      "[INFO    ] 2023-03-29 16:48:47 | AdsListParser: read page 4\n",
+      "[INFO    ] 2023-03-29 16:48:49 | AdsListParser: read page 5\n",
+      "[INFO    ] 2023-03-29 16:48:51 | AdsListParser: read page 6\n",
+      "[INFO    ] 2023-03-29 16:48:53 | AdsListParser: read page 7\n",
+      "[INFO    ] 2023-03-29 16:48:55 | AdsListParser: read page 8\n",
+      "[INFO    ] 2023-03-29 16:49:01 | AdsListParser: read page 9\n",
+      "[INFO    ] 2023-03-29 16:49:03 | AdsListParser: read page 10\n",
+      "[INFO    ] 2023-03-29 16:49:05 | AdsListParser: read page 11\n",
+      "[INFO    ] 2023-03-29 16:49:07 | AdsListParser: read page 12\n",
+      "[INFO    ] 2023-03-29 16:49:09 | AdsListParser: read page 13\n",
+      "[INFO    ] 2023-03-29 16:49:11 | AdsListParser: read page 14\n",
+      "[INFO    ] 2023-03-29 16:49:13 | AdsListParser: read page 15\n",
+      "[INFO    ] 2023-03-29 16:49:17 | AdsListParser: read page 16\n",
+      "[INFO    ] 2023-03-29 16:49:20 | AdsListParser: read page 17\n",
+      "[INFO    ] 2023-03-29 16:49:22 | AdsListParser: read page 18\n",
+      "[INFO    ] 2023-03-29 16:49:29 | AdsListParser: read page 19\n",
+      "[INFO    ] 2023-03-29 16:49:31 | AdsListParser: read page 20\n",
+      "[INFO    ] 2023-03-29 16:49:32 | AdsListParser: read page 21\n",
+      "[INFO    ] 2023-03-29 16:49:32 | AdsListParser: last page detected\n",
+      "[INFO    ] 2023-03-29 16:49:33 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "1039\n",
+      "CPU times: user 4.15 s, sys: 92.8 ms, total: 4.25 s\n",
+      "Wall time: 1min 53s\n"
      ]
     }
    ],
@@ -175,8 +175,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "956\n",
-      "914\n"
+      "1039\n",
+      "1032\n"
      ]
     }
    ],
@@ -248,27 +248,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>524</th>\n",
-       "      <td>2507049210</td>\n",
-       "      <td>Объявление «Участок 10 сот. (ИЖС)» 5 фотографий</td>\n",
-       "      <td>11000000</td>\n",
+       "      <th>87</th>\n",
+       "      <td>2376910305</td>\n",
+       "      <td>Объявление «Участок 10 сот. (ИЖС)» 6 фотографий</td>\n",
+       "      <td>2500000</td>\n",
        "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>Эксклюзив! 10 соток в Казачьей бухте 1 линия от моря! \\n\\nУл. Военных Строителей (рядом «Пилот», «Сократ», «Сатурн», «Риф-2»).\\n\\nОбщая площадь — 10 соток (20*30).\\n\\nИдеально ровный и прямоугольный.\\n\\nКатегория: земли населенных пунктов, разрешенное использовани</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2023-01-27 16:42:18.173009</td>\n",
+       "      <td>Мореходная ул.</td>\n",
+       "      <td>Срочно! Продается от собственника два видовых соседних участка 8 соток и 2 сотки. \\nПод Ижс. Участок ровный, правильной формы, хорошие подъездные пути, рядом с участком асфальтированная дорога. Коммуникации: подведено городское электричество 3 фазы 15 квт,</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-03-29 16:49:32.637265</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>382</th>\n",
-       "      <td>2752204186</td>\n",
-       "      <td>Объявление «Участок 5 сот. (ИЖС)» 9 фотографий</td>\n",
-       "      <td>4200000</td>\n",
+       "      <th>425</th>\n",
+       "      <td>2791463776</td>\n",
+       "      <td>Объявление «Участок 7,7 сот. (ИЖС)» 27 фотографий</td>\n",
+       "      <td>2700000</td>\n",
        "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>Участок 5,2 сотки (Ижс), расположен в г. Севастополь, Гагаринский район, ул. Кедрина. Участок прямоугольной формы размером 14х40, подъезд грунтовка. \\n\\nПозвоните нам, чтобы узнать все детали! \\n\\nКоммуникации: \\n— свет — есть.\\n— вода — по границе участка.\\n— га</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2023-01-27 16:42:18.173009</td>\n",
+       "      <td>с. Угловое, ул. Шкребко, 29</td>\n",
+       "      <td>! Земля В Крыму У Моря С Городскими Коммуникациями! \\n\\nПродаётся земельный участок под застройку в живописном месте крымского побережья. \\n\\nПоблизости находятся г. Севастополь и г. Бахчисарай. \\n\\n! Ижс! \\n\\nУчасток ровный, правильной формы, без уклона. \\n\\n28х26</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2023-03-29 16:49:32.637265</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -276,21 +276,21 @@
        "</div>"
       ],
       "text/plain": [
-       "       avito_id                                            title     price  \\\n",
-       "524  2507049210  Объявление «Участок 10 сот. (ИЖС)» 5 фотографий  11000000   \n",
-       "382  2752204186   Объявление «Участок 5 сот. (ИЖС)» 9 фотографий   4200000   \n",
+       "       avito_id                                              title    price  \\\n",
+       "87   2376910305    Объявление «Участок 10 сот. (ИЖС)» 6 фотографий  2500000   \n",
+       "425  2791463776  Объявление «Участок 7,7 сот. (ИЖС)» 27 фотографий  2700000   \n",
        "\n",
-       "    obj_name adr  \\\n",
-       "524                \n",
-       "382                \n",
+       "    obj_name                          adr  \\\n",
+       "87                         Мореходная ул.   \n",
+       "425           с. Угловое, ул. Шкребко, 29   \n",
        "\n",
-       "                                                                                                                                                                                                                                                                  description  \\\n",
-       "524  Эксклюзив! 10 соток в Казачьей бухте 1 линия от моря! \\n\\nУл. Военных Строителей (рядом «Пилот», «Сократ», «Сатурн», «Риф-2»).\\n\\nОбщая площадь — 10 соток (20*30).\\n\\nИдеально ровный и прямоугольный.\\n\\nКатегория: земли населенных пунктов, разрешенное использовани   \n",
-       "382   Участок 5,2 сотки (Ижс), расположен в г. Севастополь, Гагаринский район, ул. Кедрина. Участок прямоугольной формы размером 14х40, подъезд грунтовка. \\n\\nПозвоните нам, чтобы узнать все детали! \\n\\nКоммуникации: \\n— свет — есть.\\n— вода — по границе участка.\\n— га   \n",
+       "                                                                                                                                                                                                                                                                    description  \\\n",
+       "87            Срочно! Продается от собственника два видовых соседних участка 8 соток и 2 сотки. \\nПод Ижс. Участок ровный, правильной формы, хорошие подъездные пути, рядом с участком асфальтированная дорога. Коммуникации: подведено городское электричество 3 фазы 15 квт,    \n",
+       "425  ! Земля В Крыму У Моря С Городскими Коммуникациями! \\n\\nПродаётся земельный участок под застройку в живописном месте крымского побережья. \\n\\nПоблизости находятся г. Севастополь и г. Бахчисарай. \\n\\n! Ижс! \\n\\nУчасток ровный, правильной формы, без уклона. \\n\\n28х26    \n",
        "\n",
        "     page                         ts       place  \n",
-       "524    11 2023-01-27 16:42:18.173009  sevastopol  \n",
-       "382     8 2023-01-27 16:42:18.173009  sevastopol  "
+       "87      2 2023-03-29 16:49:32.637265  sevastopol  \n",
+       "425     9 2023-03-29 16:49:32.637265  sevastopol  "
       ]
      },
      "execution_count": 10,
@@ -327,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.9"
   },
   "toc": {
    "base_numbering": 1,
